stp/src/parser/parsecvc.output
Useless nonterminals

   ForDecl


Terminals which are not used

   "EXCEPT"
   "END"
   "PUSH"
   "POP"
   '{'
   '.'


Useless rules

  111 ForDecl: FORMID_TOK ':' Type


Grammar

    0 $accept: cmd $end

    1 cmd: other_cmd
    2    | other_cmd counterexample

    3 counterexample: COUNTEREXAMPLE_TOK ';'

    4 other_cmd: /* empty */
    5          | Query
    6          | VarDecls Query
    7          | other_cmd1 Query

    8 other_cmd1: VarDecls Asserts
    9           | Asserts
   10           | other_cmd1 VarDecls Asserts

   11 Asserts: Assert
   12        | Asserts Assert

   13 Assert: "ASSERT" Formula ';'

   14 Query: "QUERY" Formula ';'

   15 VarDecls: VarDecl ';'
   16         | VarDecls VarDecl ';'

   17 VarDecl: FORM_IDs ':' Type
   18        | FORM_IDs ':' Type '=' Expr
   19        | FORM_IDs ':' Type '=' Formula

   20 reverseFORM_IDs: STRING_TOK
   21                | STRING_TOK ',' reverseFORM_IDs

   22 FORM_IDs: reverseFORM_IDs

   23 Type: BvType
   24     | BoolType
   25     | ArrayType

   26 BvType: "BV" '(' NUMERAL_TOK ')'

   27 BoolType: "BOOLEAN"

   28 ArrayType: "ARRAY" BvType "OF" BvType

   29 IfExpr: "IF" Formula "THEN" Expr ElseRestExpr

   30 ElseRestExpr: "ELSE" Expr "ENDIF"
   31             | "ELSIF" Expr "THEN" Expr ElseRestExpr

   32 Formula: '(' Formula ')'
   33        | FORMID_TOK
   34        | FORMID_TOK '(' Expr ')'
   35        | "BOOLEXTRACT" '(' Expr ',' NUMERAL_TOK ')'
   36        | Expr '=' Expr
   37        | Expr "/=" Expr
   38        | "NOT" Formula
   39        | Formula "OR" Formula
   40        | Formula "NOR" Formula
   41        | Formula "AND" Formula
   42        | Formula "NAND" Formula
   43        | Formula "=>" Formula
   44        | Formula "<=>" Formula
   45        | Formula "XOR" Formula
   46        | "BVLT" '(' Expr ',' Expr ')'
   47        | "BVGT" '(' Expr ',' Expr ')'
   48        | "BVLE" '(' Expr ',' Expr ')'
   49        | "BVGE" '(' Expr ',' Expr ')'
   50        | "BVSLT" '(' Expr ',' Expr ')'
   51        | "BVSGT" '(' Expr ',' Expr ')'
   52        | "BVSLE" '(' Expr ',' Expr ')'
   53        | "BVSGE" '(' Expr ',' Expr ')'
   54        | IfForm
   55        | "TRUE"
   56        | "FALSE"
   57        | "LET" LetDecls "IN" Formula

   58 IfForm: "IF" Formula "THEN" Formula ElseRestForm

   59 ElseRestForm: "ELSE" Formula "ENDIF"
   60             | "ELSIF" Formula "THEN" Formula ElseRestForm
   61             | STRING_TOK

   62 Exprs: Expr
   63      | Exprs ',' Expr

   64 Expr: TERMID_TOK
   65     | '(' Expr ')'
   66     | BVCONST_TOK
   67     | "BOOLBV" '(' Formula ')'
   68     | NUMERAL_TOK BIN_BASED_NUMBER
   69     | NUMERAL_TOK DEC_BASED_NUMBER
   70     | NUMERAL_TOK HEX_BASED_NUMBER
   71     | Expr '[' Expr ']'
   72     | Expr '(' Expr ')'
   73     | Expr '[' NUMERAL_TOK ':' NUMERAL_TOK ']'
   74     | "~" Expr
   75     | Expr "&" Expr
   76     | Expr "|" Expr
   77     | "BVXOR" '(' Expr ',' Expr ')'
   78     | "BVNAND" '(' Expr ',' Expr ')'
   79     | "BVNOR" '(' Expr ',' Expr ')'
   80     | "BVXNOR" '(' Expr ',' Expr ')'
   81     | "BVSX" '(' Expr ',' NUMERAL_TOK ')'
   82     | Expr "@" Expr
   83     | Expr "<<" NUMERAL_TOK
   84     | Expr "<<" Expr
   85     | Expr ">>" NUMERAL_TOK
   86     | Expr ">>" Expr
   87     | "BVSHL" '(' Expr ',' Expr ')'
   88     | "BVLSHR" '(' Expr ',' Expr ')'
   89     | "BVASHR" '(' Expr ',' Expr ')'
   90     | "BVPLUS" '(' NUMERAL_TOK ',' Exprs ')'
   91     | "BVSUB" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   92     | "BVUMINUS" '(' Expr ')'
   93     | "BVMULT" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   94     | "BVDIV" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   95     | "BVMOD" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   96     | "SBVDIV" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   97     | "SBVREM" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   98     | IfExpr
   99     | ArrayUpdateExpr
  100     | "LET" LetDecls "IN" Expr
  101     | STRING_TOK

  102 ArrayUpdateExpr: Expr "WITH" Updates

  103 Updates: '[' Expr ']' ":=" Expr
  104        | Updates "WITH" '[' Expr ']' ":=" Expr

  105 LetDecls: LetDecl
  106         | LetDecls ',' LetDecl

  107 LetDecl: STRING_TOK '=' Expr
  108        | STRING_TOK ':' Type '=' Expr
  109        | STRING_TOK '=' Formula
  110        | STRING_TOK ':' Type '=' Formula


Terminals, with rules where they appear

$end (0) 0
'(' (40) 26 32 34 35 46 47 48 49 50 51 52 53 65 67 72 77 78 79 80 81
    87 88 89 90 91 92 93 94 95 96 97
')' (41) 26 32 34 35 46 47 48 49 50 51 52 53 65 67 72 77 78 79 80 81
    87 88 89 90 91 92 93 94 95 96 97
',' (44) 21 35 46 47 48 49 50 51 52 53 63 77 78 79 80 81 87 88 89 90
    91 93 94 95 96 97 106
'.' (46)
':' (58) 17 18 19 73 108 110
';' (59) 3 13 14 15 16
'=' (61) 18 19 36 107 108 109 110
'[' (91) 71 73 103 104
']' (93) 71 73 103 104
'{' (123)
error (256)
"AND" (258) 41
"OR" (259) 39
"NOT" (260) 38
"EXCEPT" (261)
"XOR" (262) 45
"NAND" (263) 42
"NOR" (264) 40
"=>" (265) 43
"<=>" (266) 44
"IF" (267) 29 58
"THEN" (268) 29 31 58 60
"ELSE" (269) 30 59
"ELSIF" (270) 31 60
"END" (271)
"ENDIF" (272) 30 59
"/=" (273) 37
":=" (274) 103 104
"BV" (275) 26
"<<" (276) 83 84
">>" (277) 85 86
"BVSHL" (278) 87
"BVLSHR" (279) 88
"BVASHR" (280) 89
"BVPLUS" (281) 90
"BVSUB" (282) 91
"BVUMINUS" (283) 92
"BVMULT" (284) 93
"BVDIV" (285) 94
"BVMOD" (286) 95
"SBVDIV" (287) 96
"SBVREM" (288) 97
"~" (289) 74
"&" (290) 75
"|" (291) 76
"BVXOR" (292) 77
"BVNAND" (293) 78
"BVNOR" (294) 79
"BVXNOR" (295) 80
"@" (296) 82
"BVLT" (297) 46
"BVGT" (298) 47
"BVLE" (299) 48
"BVGE" (300) 49
"BVSLT" (301) 50
"BVSGT" (302) 51
"BVSLE" (303) 52
"BVSGE" (304) 53
"BOOLBV" (305) 67
"BVSX" (306) 81
"BOOLEXTRACT" (307) 35
"ASSERT" (308) 13
"QUERY" (309) 14
"BOOLEAN" (310) 27
"ARRAY" (311) 28
"OF" (312) 28
"WITH" (313) 102 104
"TRUE" (314) 55
"FALSE" (315) 56
"IN" (316) 57 100
"LET" (317) 57 100
"PUSH" (318)
"POP" (319)
BVCONST_TOK (320) 66
TERMID_TOK (321) 64
FORMID_TOK (322) 33 34
COUNTEREXAMPLE_TOK (323) 3
NUMERAL_TOK (324) 26 35 68 69 70 73 81 83 85 90 91 93 94 95 96 97
BIN_BASED_NUMBER (325) 68
DEC_BASED_NUMBER (326) 69
HEX_BASED_NUMBER (327) 70
STRING_TOK (328) 20 21 61 101 107 108 109 110


Nonterminals, with rules where they appear

$accept (84)
    on left: 0
cmd (85)
    on left: 1 2, on right: 0
counterexample (86)
    on left: 3, on right: 2
other_cmd (87)
    on left: 4 5 6 7, on right: 1 2
other_cmd1 (88)
    on left: 8 9 10, on right: 7 10
Asserts (89)
    on left: 11 12, on right: 8 9 10 12
Assert (90)
    on left: 13, on right: 11 12
Query (91)
    on left: 14, on right: 5 6 7
VarDecls (92)
    on left: 15 16, on right: 6 8 10 16
VarDecl (93)
    on left: 17 18 19, on right: 15 16
reverseFORM_IDs (94)
    on left: 20 21, on right: 21 22
FORM_IDs (95)
    on left: 22, on right: 17 18 19
Type (96)
    on left: 23 24 25, on right: 17 18 19 108 110
BvType (97)
    on left: 26, on right: 23 28
BoolType (98)
    on left: 27, on right: 24
ArrayType (99)
    on left: 28, on right: 25
IfExpr (100)
    on left: 29, on right: 98
ElseRestExpr (101)
    on left: 30 31, on right: 29 31
Formula (102)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55 56 57, on right: 13 14 19 29 32 38 39 40 41 42
    43 44 45 57 58 59 60 67 109 110
IfForm (103)
    on left: 58, on right: 54
ElseRestForm (104)
    on left: 59 60 61, on right: 58 60
Exprs (105)
    on left: 62 63, on right: 63 90
Expr (106)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101,
    on right: 18 29 30 31 34 35 36 37 46 47 48 49 50 51 52 53 62 63
    65 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 91
    92 93 94 95 96 97 100 102 103 104 107 108
ArrayUpdateExpr (107)
    on left: 102, on right: 99
Updates (108)
    on left: 103 104, on right: 102 104
LetDecls (109)
    on left: 105 106, on right: 57 100 106
LetDecl (110)
    on left: 107 108 109 110, on right: 105 106


state 0

    0 $accept: . cmd $end

    "ASSERT"    shift, and go to state 1
    "QUERY"     shift, and go to state 2
    STRING_TOK  shift, and go to state 3

    $default  reduce using rule 4 (other_cmd)

    cmd              go to state 4
    other_cmd        go to state 5
    other_cmd1       go to state 6
    Asserts          go to state 7
    Assert           go to state 8
    Query            go to state 9
    VarDecls         go to state 10
    VarDecl          go to state 11
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


state 1

   13 Assert: "ASSERT" . Formula ';'

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVSHL"        shift, and go to state 16
    "BVLSHR"       shift, and go to state 17
    "BVASHR"       shift, and go to state 18
    "BVPLUS"       shift, and go to state 19
    "BVSUB"        shift, and go to state 20
    "BVUMINUS"     shift, and go to state 21
    "BVMULT"       shift, and go to state 22
    "BVDIV"        shift, and go to state 23
    "BVMOD"        shift, and go to state 24
    "SBVDIV"       shift, and go to state 25
    "SBVREM"       shift, and go to state 26
    "~"            shift, and go to state 27
    "BVXOR"        shift, and go to state 28
    "BVNAND"       shift, and go to state 29
    "BVNOR"        shift, and go to state 30
    "BVXNOR"       shift, and go to state 31
    "BVLT"         shift, and go to state 32
    "BVGT"         shift, and go to state 33
    "BVLE"         shift, and go to state 34
    "BVGE"         shift, and go to state 35
    "BVSLT"        shift, and go to state 36
    "BVSGT"        shift, and go to state 37
    "BVSLE"        shift, and go to state 38
    "BVSGE"        shift, and go to state 39
    "BOOLBV"       shift, and go to state 40
    "BVSX"         shift, and go to state 41
    "BOOLEXTRACT"  shift, and go to state 42
    "TRUE"         shift, and go to state 43
    "FALSE"        shift, and go to state 44
    "LET"          shift, and go to state 45
    '('            shift, and go to state 46
    BVCONST_TOK    shift, and go to state 47
    TERMID_TOK     shift, and go to state 48
    FORMID_TOK     shift, and go to state 49
    NUMERAL_TOK    shift, and go to state 50
    STRING_TOK     shift, and go to state 51

    IfExpr           go to state 52
    Formula          go to state 53
    IfForm           go to state 54
    Expr             go to state 55
    ArrayUpdateExpr  go to state 56


state 2

   14 Query: "QUERY" . Formula ';'

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVSHL"        shift, and go to state 16
    "BVLSHR"       shift, and go to state 17
    "BVASHR"       shift, and go to state 18
    "BVPLUS"       shift, and go to state 19
    "BVSUB"        shift, and go to state 20
    "BVUMINUS"     shift, and go to state 21
    "BVMULT"       shift, and go to state 22
    "BVDIV"        shift, and go to state 23
    "BVMOD"        shift, and go to state 24
    "SBVDIV"       shift, and go to state 25
    "SBVREM"       shift, and go to state 26
    "~"            shift, and go to state 27
    "BVXOR"        shift, and go to state 28
    "BVNAND"       shift, and go to state 29
    "BVNOR"        shift, and go to state 30
    "BVXNOR"       shift, and go to state 31
    "BVLT"         shift, and go to state 32
    "BVGT"         shift, and go to state 33
    "BVLE"         shift, and go to state 34
    "BVGE"         shift, and go to state 35
    "BVSLT"        shift, and go to state 36
    "BVSGT"        shift, and go to state 37
    "BVSLE"        shift, and go to state 38
    "BVSGE"        shift, and go to state 39
    "BOOLBV"       shift, and go to state 40
    "BVSX"         shift, and go to state 41
    "BOOLEXTRACT"  shift, and go to state 42
    "TRUE"         shift, and go to state 43
    "FALSE"        shift, and go to state 44
    "LET"          shift, and go to state 45
    '('            shift, and go to state 46
    BVCONST_TOK    shift, and go to state 47
    TERMID_TOK     shift, and go to state 48
    FORMID_TOK     shift, and go to state 49
    NUMERAL_TOK    shift, and go to state 50
    STRING_TOK     shift, and go to state 51

    IfExpr           go to state 52
    Formula          go to state 57
    IfForm           go to state 54
    Expr             go to state 55
    ArrayUpdateExpr  go to state 56


state 3

   20 reverseFORM_IDs: STRING_TOK .
   21                | STRING_TOK . ',' reverseFORM_IDs

    ','  shift, and go to state 58

    $default  reduce using rule 20 (reverseFORM_IDs)


state 4

    0 $accept: cmd . $end

    $end  shift, and go to state 59


state 5

    1 cmd: other_cmd .
    2    | other_cmd . counterexample

    COUNTEREXAMPLE_TOK  shift, and go to state 60

    $default  reduce using rule 1 (cmd)

    counterexample  go to state 61


state 6

    7 other_cmd: other_cmd1 . Query
   10 other_cmd1: other_cmd1 . VarDecls Asserts

    "QUERY"     shift, and go to state 2
    STRING_TOK  shift, and go to state 3

    Query            go to state 62
    VarDecls         go to state 63
    VarDecl          go to state 11
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


state 7

    9 other_cmd1: Asserts .
   12 Asserts: Asserts . Assert

    "ASSERT"  shift, and go to state 1

    $default  reduce using rule 9 (other_cmd1)

    Assert  go to state 64


state 8

   11 Asserts: Assert .

    $default  reduce using rule 11 (Asserts)


state 9

    5 other_cmd: Query .

    $default  reduce using rule 5 (other_cmd)


state 10

    6 other_cmd: VarDecls . Query
    8 other_cmd1: VarDecls . Asserts
   16 VarDecls: VarDecls . VarDecl ';'

    "ASSERT"    shift, and go to state 1
    "QUERY"     shift, and go to state 2
    STRING_TOK  shift, and go to state 3

    Asserts          go to state 65
    Assert           go to state 8
    Query            go to state 66
    VarDecl          go to state 67
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


state 11

   15 VarDecls: VarDecl . ';'

    ';'  shift, and go to state 68


state 12

   22 FORM_IDs: reverseFORM_IDs .

    $default  reduce using rule 22 (FORM_IDs)


state 13

   17 VarDecl: FORM_IDs . ':' Type
   18        | FORM_IDs . ':' Type '=' Expr
   19        | FORM_IDs . ':' Type '=' Formula

    ':'  shift, and go to state 69


state 14

   38 Formula: "NOT" . Formula

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVSHL"        shift, and go to state 16
    "BVLSHR"       shift, and go to state 17
    "BVASHR"       shift, and go to state 18
    "BVPLUS"       shift, and go to state 19
    "BVSUB"        shift, and go to state 20
    "BVUMINUS"     shift, and go to state 21
    "BVMULT"       shift, and go to state 22
    "BVDIV"        shift, and go to state 23
    "BVMOD"        shift, and go to state 24
    "SBVDIV"       shift, and go to state 25
    "SBVREM"       shift, and go to state 26
    "~"            shift, and go to state 27
    "BVXOR"        shift, and go to state 28
    "BVNAND"       shift, and go to state 29
    "BVNOR"        shift, and go to state 30
    "BVXNOR"       shift, and go to state 31
    "BVLT"         shift, and go to state 32
    "BVGT"         shift, and go to state 33
    "BVLE"         shift, and go to state 34
    "BVGE"         shift, and go to state 35
    "BVSLT"        shift, and go to state 36
    "BVSGT"        shift, and go to state 37
    "BVSLE"        shift, and go to state 38
    "BVSGE"        shift, and go to state 39
    "BOOLBV"       shift, and go to state 40
    "BVSX"         shift, and go to state 41
    "BOOLEXTRACT"  shift, and go to state 42
    "TRUE"         shift, and go to state 43
    "FALSE"        shift, and go to state 44
    "LET"          shift, and go to state 45
    '('            shift, and go to state 46
    BVCONST_TOK    shift, and go to state 47
    TERMID_TOK     shift, and go to state 48
    FORMID_TOK     shift, and go to state 49
    NUMERAL_TOK    shift, and go to state 50
    STRING_TOK     shift, and go to state 51

    IfExpr           go to state 52
    Formula          go to state 70
    IfForm           go to state 54
    Expr             go to state 55
    ArrayUpdateExpr  go to state 56


state 15

   29 IfExpr: "IF" . Formula "THEN" Expr ElseRestExpr
   58 IfForm: "IF" . Formula "THEN" Formula ElseRestForm

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVSHL"        shift, and go to state 16
    "BVLSHR"       shift, and go to state 17
    "BVASHR"       shift, and go to state 18
    "BVPLUS"       shift, and go to state 19
    "BVSUB"        shift, and go to state 20
    "BVUMINUS"     shift, and go to state 21
    "BVMULT"       shift, and go to state 22
    "BVDIV"        shift, and go to state 23
    "BVMOD"        shift, and go to state 24
    "SBVDIV"       shift, and go to state 25
    "SBVREM"       shift, and go to state 26
    "~"            shift, and go to state 27
    "BVXOR"        shift, and go to state 28
    "BVNAND"       shift, and go to state 29
    "BVNOR"        shift, and go to state 30
    "BVXNOR"       shift, and go to state 31
    "BVLT"         shift, and go to state 32
    "BVGT"         shift, and go to state 33
    "BVLE"         shift, and go to state 34
    "BVGE"         shift, and go to state 35
    "BVSLT"        shift, and go to state 36
    "BVSGT"        shift, and go to state 37
    "BVSLE"        shift, and go to state 38
    "BVSGE"        shift, and go to state 39
    "BOOLBV"       shift, and go to state 40
    "BVSX"         shift, and go to state 41
    "BOOLEXTRACT"  shift, and go to state 42
    "TRUE"         shift, and go to state 43
    "FALSE"        shift, and go to state 44
    "LET"          shift, and go to state 45
    '('            shift, and go to state 46
    BVCONST_TOK    shift, and go to state 47
    TERMID_TOK     shift, and go to state 48
    FORMID_TOK     shift, and go to state 49
    NUMERAL_TOK    shift, and go to state 50
    STRING_TOK     shift, and go to state 51

    IfExpr           go to state 52
    Formula          go to state 71
    IfForm           go to state 54
    Expr             go to state 55
    ArrayUpdateExpr  go to state 56


state 16

   87 Expr: "BVSHL" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 72


state 17

   88 Expr: "BVLSHR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 73


state 18

   89 Expr: "BVASHR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 74


state 19

   90 Expr: "BVPLUS" . '(' NUMERAL_TOK ',' Exprs ')'

    '('  shift, and go to state 75


state 20

   91 Expr: "BVSUB" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 76


state 21

   92 Expr: "BVUMINUS" . '(' Expr ')'

    '('  shift, and go to state 77


state 22

   93 Expr: "BVMULT" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 78


state 23

   94 Expr: "BVDIV" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 79


state 24

   95 Expr: "BVMOD" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 80


state 25

   96 Expr: "SBVDIV" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 81


state 26

   97 Expr: "SBVREM" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 82


state 27

   74 Expr: "~" . Expr

    "IF"         shift, and go to state 83
    "BVSHL"      shift, and go to state 16
    "BVLSHR"     shift, and go to state 17
    "BVASHR"     shift, and go to state 18
    "BVPLUS"     shift, and go to state 19
    "BVSUB"      shift, and go to state 20
    "BVUMINUS"   shift, and go to state 21
    "BVMULT"     shift, and go to state 22
    "BVDIV"      shift, and go to state 23
    "BVMOD"      shift, and go to state 24
    "SBVDIV"     shift, and go to state 25
    "SBVREM"     shift, and go to state 26
    "~"          shift, and go to state 27
    "BVXOR"      shift, and go to state 28
    "BVNAND"     shift, and go to state 29
    "BVNOR"      shift, and go to state 30
    "BVXNOR"     shift, and go to state 31
    "BOOLBV"     shift, and go to state 40
    "BVSX"       shift, and go to state 41
    "LET"        shift, and go to state 84
    '('          shift, and go to state 85
    BVCONST_TOK  shift, and go to state 47
    TERMID_TOK   shift, and go to state 48
    NUMERAL_TOK  shift, and go to state 50
    STRING_TOK   shift, and go to state 51

    IfExpr           go to state 52
    Expr             go to state 86
    ArrayUpdateExpr  go to state 56


state 28

   77 Expr: "BVXOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 87


state 29

   78 Expr: "BVNAND" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 88


state 30

   79 Expr: "BVNOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 89


state 31

   80 Expr: "BVXNOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 90


state 32

   46 Formula: "BVLT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 91


state 33

   47 Formula: "BVGT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 92


state 34

   48 Formula: "BVLE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 93


state 35

   49 Formula: "BVGE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 94


state 36

   50 Formula: "BVSLT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 95


state 37

   51 Formula: "BVSGT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 96


state 38

   52 Formula: "BVSLE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 97


state 39

   53 Formula: "BVSGE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 98


state 40

   67 Expr: "BOOLBV" . '(' Formula ')'

    '('  shift, and go to state 99


state 41

   81 Expr: "BVSX" . '(' Expr ',' NUMERAL_TOK ')'

    '('  shift, and go to state 100


state 42

   35 Formula: "BOOLEXTRACT" . '(' Expr ',' NUMERAL_TOK ')'

    '('  shift, and go to state 101


state 43

   55 Formula: "TRUE" .

    $default  reduce using rule 55 (Formula)


state 44

   56 Formula: "FALSE" .

    $default  reduce using rule 56 (Formula)


state 45

   57 Formula: "LET" . LetDecls "IN" Formula
  100 Expr: "LET" . LetDecls "IN" Expr

    STRING_TOK  shift, and go to state 102

    LetDecls  go to state 103
    LetDecl   go to state 104


state 46

   32 Formula: '(' . Formula ')'
   65 Expr: '(' . Expr ')'

    "NOT"          shift, and go to state 14
    "IF"           shift, and go to state 15
    "BVSHL"        shift, and go to state 16
    "BVLSHR"       shift, and go to state 17
    "BVASHR"       shift, and go to state 18
    "BVPLUS"       shift, and go to state 19
    "BVSUB"        shift, and go to state 20
    "BVUMINUS"     shift, and go to state 21
    "BVMULT"       shift, and go to state 22
    "BVDIV"        shift, and go to state 23
    "BVMOD"        shift, and go to state 24
    "SBVDIV"       shift, and go to state 25
    "SBVREM"       shift, and go to state 26
    "~"            shift, and go to state 27
    "BVXOR"        shift, and go to state 28
    "BVNAND"       shift, and go to state 29
    "BVNOR"        shift, and go to state 30
    "BVXNOR"       shift, and go to state 31
    "BVLT"         shift, and go to state 32
    "BVGT"         shift, and go to state 33
    "BVLE"         shift, and go to state 34
    "BVGE"         shift, and go to state 35
    "BVSLT"        shift, and go to state 36
    "BVSGT"        shift, and go to state 37
    "BVSLE"        shift, and go to state 38
    "BVSGE"        shift, and go to state 39
    "BOOLBV"       shift, and go to state 40
    "BVSX"         shift, and go to state 41
    "BOOLEXTRACT"  shift, and go to state 42
    "TRUE"         shift, and go to state 43
    "FALSE"        shift, and go to state 44
    "LET"          shift, and go to state 45
    '('            shift, and go to state 46
    BVCONST_TOK    shift, and go to state 47
    TERMID_TOK     shift, and go to state 48
    FORMID_TOK     shift, and go to state 49
    NUMERAL_TOK    shift, and go to state 50
    STRING_TOK     shift, and go to state 51

    IfExpr           go to state 52
    Formula          go to state 105
    IfForm           go to state 54
    Expr             go to state 106
    ArrayUpdateExpr  go to state 56


state 47

   66 Expr: BVCONST_TOK .

    $default  reduce using rule 66 (Expr)


state 48

   64 Expr: TERMID_TOK .

    $default  reduce using rule 64 (Expr)


state 49

   33 Formula: FORMID_TOK .
   34        | FORMID_TOK . '(' Expr ')'

    '('  shift, and go to state 107

    $default  reduce using rule 33 (Formula)


state 50

   68 Expr: NUMERAL_TOK . BIN_BASED_NUMBER
   69     | NUMERAL_TOK . DEC_BASED_NUMBER
   70     | NUMERAL_TOK . HEX_BASED_NUMBER

    BIN_BASED_NUMBER  shift, and go to state 108
    DEC_BASED_NUMBER  shift, and go to state 109
    HEX_BASED_NUMBER  shift, and go to state 110


state 51

  101 Expr: STRING_TOK .

    $default  reduce using rule 101 (Expr)


state 52

   98 Expr: IfExpr .

    $default  reduce using rule 98 (Expr)


state 53

   13 Assert: "ASSERT" Formula . ';'
   39 Formula: Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula

    "AND"   shift, and go to state 111
    "OR"    shift, and go to state 112
    "XOR"   shift, and go to state 113
    "NAND"  shift, and go to state 114
    "NOR"   shift, and go to state 115
    "=>"    shift, and go to state 116
    "<=>"   shift, and go to state 117
    ';'     shift, and go to state 118


state 54

   54 Formula: IfForm .

    $default  reduce using rule 54 (Formula)


state 55

   36 Formula: Expr . '=' Expr
   37        | Expr . "/=" Expr
   71 Expr: Expr . '[' Expr ']'
   72     | Expr . '(' Expr ')'
   73     | Expr . '[' NUMERAL_TOK ':' NUMERAL_TOK ']'
   75     | Expr . "&" Expr
   76     | Expr . "|" Expr
   82     | Expr . "@" Expr
   83     | Expr . "<<" NUMERAL_TOK
   84     | Expr . "<<" Expr
   85     | Expr . ">>" NUMERAL_TOK
   86     | Expr . ">>" Expr
  102 ArrayUpdateExpr: Expr . "WITH" Updates

    "/="    shift, and go to state 119
    "<<"    shift, and go to state 120
    ">>"    shift, and go to state 121
    "&"     shift, and go to state 122
    "|"     shift, and go to state 123
    "@"     shift, and go to state 124
    "WITH"  shift, and go to state 125
    '='     shift, and go to state 126
    '['     shift, and go to state 127
    '('     shift, and go to state 128


state 56

   99 Expr: ArrayUpdateExpr .

    $default  reduce using rule 99 (Expr)


state 57

   14 Query: "QUERY" Formula . ';'
   39 Formula: Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula

    "AND"   shift, and go to state 111
    "OR"    shift, and go to state 112
    "XOR"   shift, and go to state 113
    "NAND"  shift, and go to state 114
    "NOR"   shift, and go to state 115
    "=>"    shift, and go to state 116
    "<=>"   shift, and go to state 117
    ';'     shift, and go to state 129


state 58

   21 reverseFORM_IDs: STRING_TOK ',' . reverseFORM_IDs

    STRING_TOK  shift, and go to state 3

    reverseFORM_IDs  go to state 130


state 59

    0 $accept: cmd $end .

    $default  accept


state 60

    3 counterexample: COUNTEREXAMPLE_TOK . ';'

    ';'  shift, and go to state 131


state 61

    2 cmd: other_cmd counterexample .

    $default  reduce using rule 2 (cmd)


state 62

    7 other_cmd: other_cmd1 Query .

    $default  reduce using rule 7 (other_cmd)


state 63

   10 other_cmd1: other_cmd1 VarDecls . Asserts
   16 VarDecls: VarDecls . VarDecl ';'

    "ASSERT"    shift, and go to state 1
    STRING_TOK  shift, and go to state 3

    Asserts          go to state 132
    Assert           go to state 8
    VarDecl          go to state 67
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


state 64

   12 Asserts: Asserts Assert .

    $default  reduce using rule 12 (Asserts)


state 65

    8 other_cmd1: VarDecls Asserts .
   12 Asserts: Asserts . Assert

    "ASSERT"  shift, and go to state 1

    $default  reduce using rule 8 (other_cmd1)

    Assert  go to state 64


state 66

    6 other_cmd: VarDecls Query .

    $default  reduce using rule 6 (other_cmd)


state 67

   16 VarDecls: VarDecls VarDecl . ';'

    ';'  shift, and go to state 133


state 68

   15 VarDecls: VarDecl ';' .

    $default  reduce using rule 15 (VarDecls)


state 69

   17 VarDecl: FORM_IDs ':' . Type
   18        | FORM_IDs ':' . Type '=' Expr
   19        | FORM_IDs ':' . Type '=' Formula

    "BV"       shift, and go to state 134
    "BOOLEAN"  shift, and go to state 135
    "ARRAY"    shift, and go to state 136

    Type       go to state 137
    BvType     go to state 138
    BoolType   go to state 139
    ArrayType  go to state 140


state 70

   38 Formula: "NOT" Formula .
   39        | Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula

    $default  reduce using rule 38 (Formula)


state 71

   29 IfExpr: "IF" Formula . "THEN" Expr ElseRestExpr
   39 Formula: Formula . "OR" Formula
   40        | Formula . "NOR" Formula
   41        | Formula . "AND" Formula
   42        | Formula . "NAND" Formula
   43        | Formula . "=>" Formula
   44        | Formula . "<=>" Formula
   45        | Formula . "XOR" Formula
   58 IfForm: "IF" Formula . "THEN" Formula ElseRestForm

    "AND"   shift, and go to state 111
    "OR"    shift, and go to state 112
    "XOR"   shift, and go to state 113
    "NAND"  shift, and go to state 114
    "NOR"   shift, and go to state 115
    "=>"    shift, and go to state 116
    "<=>"   shift, and go to state 117
    "THEN"  shift, and go to state 141


state 72

   87 Expr: "BVSHL" '(' . Expr ',' Expr ')'
